--- a/arch/arm/boot/dts/ste-ux500-samsung-golden.dts
+++ b/arch/arm/boot/dts/ste-ux500-samsung-golden.dts
@@ -284,6 +284,19 @@
 			};
 		};
 
+		mcde@a0350000 {
+			status = "okay";
+
+			dsi@a0351000 {
+				ste,dumb-mode;
+
+				panel {
+					compatible = "samsung,s6e63m0-dsi-simple";
+					reg = <0>;
+				};
+			};
+		};
+
 		pinctrl {
 			gpio-keys {
 				gpio_keys_default_mode: gpio_keys_default {
